--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 # OpenAI API 客户端
 openai>=1.3.0
 
+# 智能体框架
+strands-agents>=1.1.0
+
 # 数据库连接
 sqlalchemy>=2.0.0
 psycopg2-binary>=2.9.0  # PostgreSQL
@@ -21,7 +24,7 @@ gradio>=4.0.0
 
 # 知识库和向量搜索
 chromadb>=0.4.0
-sentence-transformers>=2.2.0
+# sentence-transformers>=2.2.0
 
 # 配置管理
 python-dotenv>=1.0.0
