--- a/.env.backup
+++ b/.env.backup
@@ -7,7 +7,7 @@ DATABASE_USER=root
 DATABASE_PASSWORD=102699
 
 # DashScope API配置
-DASHSCOPE_API_KEY='sk-fcfb95b49f7c430aa620a10e110bc8c5'
+DASHSCOPE_API_KEY=''
 DASHSCOPE_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
 
 # 模型配置
