--- a/config.env.example
+++ b/config.env.example
@@ -38,3 +38,9 @@ SCHEMA_CACHE_TTL=3600
 # 日志配置
 LOG_LEVEL=INFO
 LOG_FILE=./logs/chatbi.log
+
+# RAG知识库配置
+RAG_ENABLED=true
+RAG_SIMILARITY_THRESHOLD=0.7
+RAG_CONFIDENCE_THRESHOLD=0.85
+RAG_MAX_EXAMPLES=3
