整体架构优化

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,11 @@ data/charts/
 data/*.csv
 data/*.xlsx
 data/*.json
+
+# Kiro IDE files
+.kiro/
+
+# Test cache
+.pytest_cache/
+tests/__pycache__/
+tests/*.pyc
