--- a/.env.backup
+++ b/.env.backup
@@ -1,13 +1,13 @@
 # 数据库配置
 DATABASE_TYPE=mysql
-DATABASE_HOST=localhost
-DATABASE_PORT=3306
-DATABASE_NAME=root
-DATABASE_USER=root
-DATABASE_PASSWORD=102699
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_DATABASE=root
+MYSQL_USER=root
+MYSQL_PASSWORD=
 
 # DashScope API配置
-DASHSCOPE_API_KEY=''
+DASHSCOPE_API_KEY=
 DASHSCOPE_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
 
 # 模型配置
@@ -16,12 +16,6 @@ LLM_CODER_MODEL=qwen-coder-plus
 EMBEDDING_MODEL=text-embedding-v3
 RERANK_MODEL=gte-rerank-v2
 
-# Web服务配置
-API_HOST=0.0.0.0
-API_PORT=8000
-DEBUG=false
-SECRET_KEY=your_secret_key_here
-ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8080
 
 # 缓存和存储配置
 KNOWLEDGE_BASE_PATH=./data/knowledge_base
@@ -30,3 +24,15 @@ SCHEMA_CACHE_TTL=3600
 # 日志配置
 LOG_LEVEL=INFO
 LOG_FILE=./logs/chatbi.log
+
+# RAG配置
+RAG_ENABLED=true
+RAG_SIMILARITY_THRESHOLD=0.6
+RAG_CONFIDENCE_THRESHOLD=0.8
+RAG_MAX_EXAMPLES=3
+RAG_VECTOR_DIMENSION=1024
+RAG_SEARCH_TIMEOUT=5.0
+RAG_CACHE_SIZE=1000
+RAG_BATCH_SIZE=100
+RAG_INDEX_TYPE=hnsw
+RAG_DISTANCE_METRIC=cosine
