feat: 添加新功能

--- a/config.env.example
+++ b/config.env.example
@@ -44,3 +44,29 @@ RAG_ENABLED=true
 RAG_SIMILARITY_THRESHOLD=0.6
 RAG_CONFIDENCE_THRESHOLD=0.8
 RAG_MAX_EXAMPLES=3
+
+# 认证配置
+AUTH_SESSION_TIMEOUT=3600
+AUTH_SESSION_CLEANUP_INTERVAL=300
+AUTH_MAX_SESSIONS_PER_USER=5
+AUTH_MAX_LOGIN_ATTEMPTS=5
+AUTH_LOCKOUT_DURATION=900
+AUTH_LOCKOUT_ENABLED=true
+AUTH_PASSWORD_MIN_LENGTH=8
+AUTH_PASSWORD_MAX_LENGTH=128
+AUTH_REQUIRE_PASSWORD_COMPLEXITY=true
+AUTH_JWT_SECRET_KEY=your_jwt_secret_key_here_please_change_this
+AUTH_JWT_ALGORITHM=HS256
+AUTH_JWT_EXPIRATION=3600
+AUTH_ENABLE_CSRF_PROTECTION=true
+AUTH_ENABLE_AUDIT_LOGGING=true
+
+# 权限配置
+PERM_DEFAULT_SCHEMA_ACCESS=
+PERM_ADMIN_SCHEMAS=
+PERM_PUBLIC_SCHEMAS=
+PERM_SCHEMA_ISOLATION_ENABLED=true
+PERM_STRICT_PERMISSION_CHECK=true
+PERM_INHERIT_ADMIN_PERMISSIONS=true
+PERM_CACHE_ENABLED=true
+PERM_CACHE_TTL=300
